--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    // --- Project Structure & Module Settings ---
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-
-    // --- Core Type-Checking Configuration for JavaScript ---
-    "allowJs": true,          // Allow JavaScript files to be processed.
-    "checkJs": true,          // Enable type-checking for .js files. This is the key!
-    "noEmit": true,           // Do not generate output files; we only want to type-check.
-    "declaration": false,     // Do not generate .d.ts files from JSDoc.
-
-    // --- Strictness & Quality Rules (based on your strictest config) ---
+    "allowJs": true,
+    "checkJs": true,
+    "noEmit": true,
+    "declaration": false,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -27,11 +22,9 @@
     "exactOptionalPropertyTypes": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-
-    // --- Library & Interop Settings ---
     "skipLibCheck": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"], // Only check files within the 'src' directory
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
