still have out of memory trouble with the comprehensive test

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .js,.mjs,.ts,.d.ts",
     "lint:fix": "eslint . --ext .js,.mjs,.ts,.d.ts --fix",
     "format:check": "prettier --check .",
@@ -23,6 +27,7 @@
     "eslint-plugin-security": "^3.0.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
