--- a/.github/workflows/bastion-gates.yml
+++ b/.github/workflows/bastion-gates.yml
@@ -105,68 +105,60 @@ jobs:
     needs: [Validate-Configs]
     runs-on: ubuntu-latest
     strategy:
-      # Ensures all analysis jobs run, even if one fails.
       fail-fast: false
       matrix:
-        # 'tsc' is added for strict type checking.
         tool: [eslint, prettier, tsc, codeql]
     steps:
       - name: Checkout code
-        # Pinned to commit SHA for v4.1.7 for security and reproducibility.
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
 
       - name: Set up Node.js
-        if: matrix.tool != 'codeql' # CodeQL has its own setup
-        # Pinned to commit SHA for v4.0.3 for security and reproducibility.
+        if: matrix.tool != 'codeql'
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
-          node-version: "22" # Use a recent LTS version
+          node-version: "22"
           cache: "npm"
 
       - name: Install dependencies
         if: matrix.tool != 'codeql'
         run: npm ci
 
-      # --- Tool-specific analysis steps ---
-
       - name: Run ESLint
         if: matrix.tool == 'eslint'
-        # Generates a JSON report for SonarQube.
-        # '|| true' allows the workflow to continue, letting SonarQube handle the quality gate.
         run: npx eslint . --format json --output-file eslint-report.json || true
 
       - name: Run Prettier Check
         if: matrix.tool == 'prettier'
-        # Checks for formatting issues without changing files.
         run: npm run format:check || true
 
       - name: Run TypeScript Type-Checker
         if: matrix.tool == 'tsc'
-        # Uses the project's tsconfig.json to perform strict type checking on JS files (via allowJs).
         run: npx tsc --noEmit -p tsconfig.json
 
       - name: Initialize CodeQL
         if: matrix.tool == 'codeql'
-        # Pinned to the latest SHA from your Renovate PR for security and reproducibility.
         uses: github/codeql-action/init@7273f08caa1dcf2c2837f362f1982de0ab4dc344
         with:
           languages: javascript-typescript
 
+      # --- MODIFICATION 1: Control the output directory ---
       - name: Perform CodeQL Analysis
         if: matrix.tool == 'codeql'
-        # Pinned to the latest SHA from your Renovate PR for security and reproducibility.
         uses: github/codeql-action/analyze@7273f08caa1dcf2c2837f362f1982de0ab4dc344
         with:
           category: "/language:javascript"
+          # This line tells CodeQL where to save the SARIF file.
+          output: codeql-results
 
+      # --- MODIFICATION 2: Update the path for the artifact ---
       - name: Upload report artifact
-        # Pinned to commit SHA for v4.3.4 for security and reproducibility.
         uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
         with:
           name: ${{ matrix.tool }}-report
+          # The path now points to the new, valid location inside the workspace.
           path: |
             eslint-report.json
-            ../results/sarif/*.sarif
+            codeql-results/*.sarif
           retention-days: 1
 
   SonarQube:
